--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
 Jinja2==2.7.1
 MarkupSafe==0.18
+PIL==1.1.7
 Pygments==1.6
 Sphinx==1.2b3
 argparse==1.2.1
-setuptools==1.4
+distribute==0.7.3
 docutils==0.11
 hieroglyph==0.6.5.dev
 sphinxcontrib-fulltoc==1.0
