--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-Jinja2==2.7.1
-MarkupSafe==0.18
-PIL==1.1.7
+Jinja2==2.7.2
+MarkupSafe==0.21
+Pillow==2.4.0
 Pygments==1.6
-Sphinx==1.2b3
+Sphinx==1.2.2
 argparse==1.2.1
-distribute==0.7.3
 docutils==0.11
-hieroglyph==0.6.5.dev
+hieroglyph==0.6.5
+six==1.6.1
 sphinxcontrib-fulltoc==1.0
 wsgiref==0.1.2
